--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -11,43 +11,70 @@
       rel="stylesheet"
     />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/login.css" />
   </head>
+
   <body>
     <header>
       <h1>
-        <a href="/FrontEnd/index.html">Sophie Bluel </a
+        <a href="/FrontEnd/index.html">Sophie Bluel</a
         ><span>Architecte d'intérieur</span>
       </h1>
       <nav>
         <ul>
-          <li>projets</li>
-          <li>contact</li>
-          <li><a href="/FrontEnd/login.html"></a>login</li>
-          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+          <li><a href="/FrontEnd/index.html">projets</a></li>
+          <li><a href="#contact">contact</a></li>
+          <li><a href="/FrontEnd/login.html" class="nav-login">login</a></li>
+          <li>
+            <a href="#"
+              ><img src="./assets/icons/instagram.png" alt="Instagram"
+            /></a>
+          </li>
         </ul>
       </nav>
     </header>
     <main>
-      <section id="contact">
-        <h2>log in</h2>
-        <form action="#" method="post">
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
+      <section id="login">
+        <h2 class="login-title">Login</h2>
+        <!-- Champ pour API -->
+        <form
+          id="log-user"
+          action="http://localhost:5678/api/users/login"
+          method="post"
+        >
+          <!-- Champ pour entrer l'email -->
+          <label for="email">E-mail</label>
+          <input
+            id="email"
+            name="email"
+            type="email"
+            required="required"
+            autocomplete="email"
+          />
+          <!-- Champ pour entrer le mot de passe -->
           <label for="password">Mot de passe</label>
-          <input type="text" name="password" id="password" />
-          <input type="submit" value="Se connecter" />
+          <input
+            id="password"
+            name="password"
+            type="password"
+            required="required"
+            autocomplete="current-password"
+          />
+          <!-- Zone d'affichage des erreurs avec js -->
+          <div id="error"></div>
+          <input id="connection" type="submit" value="Se connecter" />
         </form>
-        <p>Mot de passe oublié</p>
+        <a id="lostPassword" href="#">Mot de passe oublié</a>
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-login">
       <nav>
         <ul>
-          <li>Mentions Légales</li>
+          <li><a href="#">Mentions Légales</a></li>
         </ul>
       </nav>
     </footer>
+    <script src="./js/login.js" defer></script>
   </body>
 </html>
