fin kanban dev frontend / projet termniné

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -42,7 +42,7 @@
     <main>
       <section id="login">
         <h2 class="login-title">Login</h2>
-        <!-- Champ pour API -->
+        <!-- FORM communique avec l'API -->
         <form
           id="log-user"
           action="http://localhost:5678/api/users/login"
