--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -23,6 +23,62 @@
       <p><i class="fa-regular fa-pen-to-square"></i> Mode édition</p>
     </div>
 
+    <!-- MODAL -->
+    <div id="modal" class="modal_container">
+      <div class="overlay modal_start"></div>
+
+      <!-- MODAL 1 -->
+      <div class="modal_one">
+        <span class="close_modal modal_start">
+          <i class="fa-solid fa-xmark"></i>
+        </span>
+        <h2 class="modal_title">Galerie photo</h2>
+        <div class="modal_one-gallery">
+          <!-- Ajout dynamique de la galerie et des icones -->
+        </div>
+        <div class="modal_one-bar"></div>
+        <button class="modal_one-addbutton">Ajouter une photo</button>
+      </div>
+
+      <!-- MODAL 2 -->
+      <div class="modal_two">
+        <span class="return_modal-one">
+          <i class="fa-solid fa-arrow-left"></i>
+        </span>
+        <span class="close_modal modal_start">
+          <i class="fa-solid fa-xmark"></i>
+        </span>
+        <h2 class="modal_title">Ajout photo</h2>
+        <!-- Formulaire d'ajout -->
+        <form id="modal_two-form-id" class="modal_two-form">
+          <span class="modal_two-imgcontainer">
+            <span class="modal_two-icon">
+              <i class="fa-regular fa-image"></i>
+            </span>
+            <label for="addPhoto" class="modal_two-textAddPhoto"
+              >+ Ajouter photo</label
+            >
+            <input id="addPhoto" type="file" accept="image/jpg, image/png" />
+            <span class="modal_two-description">jpg, png : 4mo max</span>
+          </span>
+          <label for="photoTitle" class="modal_two-pictureinput">Titre</label>
+          <input id="photoTitle" type="text" />
+          <label for="photoCategories">Catégorie</label>
+          <select id="photoCategories">
+            <!-- Catégories ajoutées dynamiquement -->
+          </select>
+          <span id="errorForm"></span>
+          <span class="modal_two-bar"></span>
+          <input
+            id="validateProject"
+            class="modal_two-validationbutton"
+            type="submit"
+            value="Valider"
+          />
+        </form>
+      </div>
+    </div>
+
     <header>
       <h1>
         <a href="/FrontEnd/index.html">Sophie Bluel</a
@@ -70,7 +126,7 @@
       <section class="portfolio1" id="portfolio">
         <div class="portfolio_title">
           <h2>Mes Projets</h2>
-          <span class="buttonModify"
+          <span class="button-modify modal_start"
             ><i class="fa-regular fa-pen-to-square"></i> Modifier</span
           >
         </div>
